# product-chart-demo

./: .gitignore  Makefile  README.md  all.min.js  default.nix  product-chart-demo.cabal  product-chart-demo.nix  shell.nix
src/: Main.hs
static/: index.html.prod
static/css/: style.css
