name:                product-chart-demo
version:             0.1.0.0
license-file:        LICENSE
author:              Elliot Cameron
maintainer:          elliot@graftedindesign.com
build-type:          Simple
cabal-version:       >=1.10

executable main
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , containers
                     , ghcjs-base
                     , ghcjs-dom
                     , miso
                     , text
  default-language:    Haskell2010
